Razorpay integration ,  wishlist,  sales Report

--- a/views/admin/addCategory.ejs
+++ b/views/admin/addCategory.ejs
@@ -67,34 +67,14 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav m-auto">
                     
-                    <li class="nav-item">
-                        <a class="nav-link" href="/admin/adminDashboard">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/admin/usersList">users</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/admin/productList">Products <i class="far fa-angle-down"></i></a>
-                        <ul class="droap_menu">
-                            <li><a href="">Mobiles</a></li>
-                            <li><a href="">Laptops</a></li>
-                            <li><a href="">Headsets</a></li>
-                            
-                            
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/admin/categoryList">Category</a>
-                    </li>
+                   
                     
-                    <li class="nav-item">
-                        <a class="nav-link" href="/admin/orderList">Orders</a>
-                    </li>
+                   
                 </ul>
                 <ul class="menu_icon d-flex flex-wrap">
                     
                     <li>
-                        <a href=""><i class="fas fa-user"></i></a>
+                        <a href="/admin/dashboard"><i class="fas fa-user"></i></a>
                     </li>
                     <li>
                         <a class="common_btn" href="/admin/logout" data-bs-toggle="modal"
