--- a/views/admin/updateProducts.ejs
+++ b/views/admin/updateProducts.ejs
@@ -143,7 +143,7 @@
                                                 
                                                 <%}%>
                                             </div>
-                                            <input  type="file" placeholder="images" name="images" id="productImage" accept="image/*" required multiple>
+                                            <input  type="file" placeholder="images" name="images" id="productImage" accept="image/*"  multiple>
                                            <br>
                                             <label> Selected Images</label>
                                             <div style="max-width: 75%; height: auto; display: flex;flex-direction: row; " id="imageView">
