--- a/views/admin/addCoupon.ejs
+++ b/views/admin/addCoupon.ejs
@@ -75,7 +75,7 @@
                 <ul class="menu_icon d-flex flex-wrap">
                     
                     <li>
-                        <a href=""><i class="fas fa-user"></i></a>
+                        <a href="/admin/dashboard"><i class="fas fa-user"></i></a>
                     </li>
                     <li>
                         <a class="common_btn" href="/admin/logout" data-bs-toggle="modal"
@@ -117,13 +117,7 @@
                                             <span style="color: red;"  id="productDescriptionError"></span>
                                         </div>
                                     </div>
-                                    <div class="col-xl-12">
-                                        <div class="fp__login_imput">
-                                            <label>Maximum Discount</label>
-                                            <input type="number" placeholder="Enter the maximum discount applicable" name="maximumDiscount" id="maximumDiscount" required>
-                                            <span style="color: red;"  id="productBrandError"></span>
-                                        </div>
-                                    </div>
+                                    
                                     
                                     
                                     <div class="col-xl-12">
