--- a/views/admin/adminDashboard.ejs
+++ b/views/admin/adminDashboard.ejs
@@ -93,7 +93,7 @@
                     <h1>Admin dashboard</h1>
                     <ul>
                         <li><a href="/admin/adminDashboard">dashboard</a></li>
-                        <li><a href="/admin/sample">sample</a></li>
+                        
                     </ul>
                 </div>
             </div>
@@ -151,6 +151,11 @@
                                                       type="button" role="tab"
                                     aria-controls="v-pills-settings" aria-selected="false"><span><i
                                             class="fas fa-user-lock"></i></span>Coupon</button>
+
+                                            <button class="nav-link" id="sales-tab" data-bs-toggle="pill"
+                                                      type="button" role="tab"
+                                    aria-controls="v-pills-settings" aria-selected="false"><span><i
+                                            class="fas fa-user-lock"></i></span>Sales Report</button>
 
                                 <button class="nav-link" type="button"><span> <i class="fas fa-sign-out-alt"></i>
                                     </span> Logout</button>
@@ -237,7 +242,9 @@
                                     window.location.href = "/admin/couponList"
 
                                 })
-                                
+                                document.getElementById("sales-tab").addEventListener("click" , (event)=>{
+                                    window.location.href = "/admin/salesReport"
+                                })
                             </script>
                             
                             
