--- a/views/admin/categoryList.ejs
+++ b/views/admin/categoryList.ejs
@@ -75,7 +75,7 @@
                 <ul class="menu_icon d-flex flex-wrap">
                     
                     <li>
-                        <a href="/admin/adminDashboard"><i class="fas fa-user"></i></a>
+                        <a href="/admin/dashboard"><i class="fas fa-user"></i></a>
                     </li>
                     <li>
                         <a class="common_btn" href="/admin/logout" data-bs-toggle="modal"
@@ -132,6 +132,11 @@
                                                       type="button" role="tab"
                                     aria-controls="v-pills-settings" aria-selected="false"><span><i
                                             class="fas fa-user-lock"></i></span>Coupon</button>
+
+                                            <button class="nav-link" id="sales-tab" data-bs-toggle="pill"
+                                                      type="button" role="tab"
+                                    aria-controls="v-pills-settings" aria-selected="false"><span><i
+                                            class="fas fa-user-lock"></i></span>Sales Report</button>
 
                                 <button class="nav-link" type="button"><span> <i class="fas fa-sign-out-alt"></i>
                                     </span> Logout</button>
@@ -253,6 +258,10 @@
     })
     document.getElementById("coupon-tab").addEventListener("click" , (event)=>{
         window.location.href = "/admin/couponList"
+
+    })
+    document.getElementById("sales-tab").addEventListener("click" , (event)=>{
+        window.location.href = "/admin/salesReport"
 
     })
 
