--- a/views/admin/listAllOrders.ejs
+++ b/views/admin/listAllOrders.ejs
@@ -71,7 +71,7 @@
                 <ul class="menu_icon d-flex flex-wrap">
                     
                     <li>
-                        <a href=""><i class="fas fa-user"></i></a>
+                        <a href="/admin/dashboard"><i class="fas fa-user"></i></a>
                     </li>
                     <li>
                         <a class="common_btn" href="/admin/logout" data-bs-toggle="modal"
