--- a/views/admin/productList.ejs
+++ b/views/admin/productList.ejs
@@ -76,7 +76,7 @@
                 <ul class="menu_icon d-flex flex-wrap">
                     
                     <li>
-                        <a href="/admin/adminDashboard" ><i class="fas fa-user"></i></a>
+                        <a href="/admin/dashboard" ><i class="fas fa-user"></i></a>
                     </li>
                     <li>
                         <a class="common_btn" href="/admin/logout" data-bs-toggle="modal"
@@ -129,6 +129,16 @@
                                                       type="button" role="tab"
                                     aria-controls="v-pills-settings" aria-selected="false"><span><i
                                             class="fas fa-user-lock"></i></span>Category</button>
+
+                                            <button class="nav-link" id="coupon-tab" data-bs-toggle="pill"
+                                                      type="button" role="tab"
+                                    aria-controls="v-pills-settings" aria-selected="false"><span><i
+                                            class="fas fa-user-lock"></i></span>Coupons</button>
+
+                                            <button class="nav-link" id="sales-tab" data-bs-toggle="pill"
+                                                      type="button" role="tab"
+                                    aria-controls="v-pills-settings" aria-selected="false"><span><i
+                                            class="fas fa-user-lock"></i></span>Sales Report</button>
 
                                 <button class="nav-link" type="button"><span> <i class="fas fa-sign-out-alt"></i>
                                     </span> Logout</button>
@@ -250,6 +260,14 @@
     })
     document.getElementById("category-tab").addEventListener("click" , (event)=>{
         window.location.href = "/admin/categoryList"
+
+    })
+    document.getElementById("coupon-tab").addEventListener("click" , (event)=>{
+        window.location.href = "/admin/couponList"
+
+    })
+    document.getElementById("sales-tab").addEventListener("click" , (event)=>{
+        window.location.href = "/admin/salesReport"
 
     })
         
