--- a/views/users/userCategory.ejs
+++ b/views/users/userCategory.ejs
@@ -29,10 +29,8 @@
                         
                             
                             <ul class="d-flex flex-wrap justify-content-center">
-                                <li><a href="" data-bs-toggle="modal" data-bs-target="#cartModal"><i
-                                            class="fas fa-shopping-basket"></i></a></li>
-                                <li><a href="#"><i class="fal fa-heart"></i></a></li>
-                                <li><a href="#"><i class="far fa-eye"></i></a></li>
+                                
+                                
                             </ul>
                         </div>
                     </div>
@@ -41,7 +39,7 @@
                 <%}%>
                 
             </div>
-            <div class="fp__pagination mt_35">
+            <!-- <div class="fp__pagination mt_35">
                 <div class="row">
                     <div class="col-12">
                         <nav aria-label="...">
@@ -59,7 +57,7 @@
                         </nav>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
